api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bnb-api-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nestjs-api
